[package]
name = "serde_esri"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/josiahparry/serde_esri"
authors = ["Josiah Parry<josiah.parry@gmail.com>"]
categories = ["science::geo", "parser-implementations", "encoding"]
keywords = ["esri", "arcgis", "geo", "gis", "spatial"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# arrow = { version = "*", features = [], optional = false}
# I need to use the exact same version of arrow as used by geoarrow
arrow = { git = "https://github.com/apache/arrow-rs", rev="fbbb61d94282165f9bb9f73fb4d00a3af16d4aee", features = ["ffi"]}
geo-types = { version = "0.7.12", optional = true }
geoarrow = { package = "geoarrow2", git = "https://github.com/geoarrow/geoarrow-rs", optional = true}
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"


[lib]
crate-type = ["staticlib", "lib"]

[features]
default = []
geo = ["dep:geo-types"]
geoarrow = ["dep:geo-types", "dep:geoarrow"]
