[package]
name = 'serdesri_r'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'serdesri_r'

[dependencies]
# arrow = { git = "https://github.com/apache/arrow-rs", rev="fbbb61d94282165f9bb9f73fb4d00a3af16d4aee"}
arrow = { version = "50.0.0" }
arrow_extendr = { version = "50.0.0" }
extendr-api = '*'
# serde_esri = { path = "../../../", version = "0.1.0", features = ["geoarrow"]}
serde_esri = { git = "https://github.com/josiahparry/serde_esri", features = ["geoarrow"] }
serde_json = "1.0.108"
simd-json = { git = "https://github.com/simd-lite/simd-json", features = ["runtime-detection"]}

