[package]
name = 'serdesri_r'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'serdesri_r'

[dependencies]
extendr-api = {version = '0.6.0', features = ["serde"] }
serde_esri = { version = "*" , path = "../../../"}
serde_json = "1.0.108"


# [patch.crates-io]
# serde_esri = {path = "../../../"}
